# robot-farm-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md  json-schema.md  pup.json
.pup/pup.json-data/: .main.secret
.robot-farm-rs/: config.json
client/: pubspec.yaml
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart
client/lib/git_status/: git_diff_sheet.dart  git_status_controller.dart  git_status_screen.dart
client/lib/services/: notification_service.dart
client/lib/sheets/: command_sheet.dart  quick_task_sheet.dart
client/lib/task_wizard/: task_wizard_controller.dart  task_wizard_screen.dart
client/lib/tasks/: task_edit_payloads.dart  task_edit_sheets.dart  tasks_controller.dart  tasks_screen.dart
client/lib/utils/: ws_channel.dart  ws_channel_io.dart  ws_channel_stub.dart  ws_channel_web.dart
client/macos/Runner.xcodeproj/: project.pbxproj
client/test/: widget_test.dart
directives/: orchestrator.md  wizard.md  worker.md
images/: Dockerfile  Dockerfile.cleanup  Dockerfile.wizard
oai_strict_schema/: Cargo.toml
oai_strict_schema/src/: errors.rs  harden.rs  lib.rs  openai.rs  rules.rs  schema_check.rs  types.rs  walk.rs
openapi/: openapi.json
openapi/flutter_client/: README.md  pubspec.yaml
openapi/flutter_client/.openapi-generator/: FILES
openapi/flutter_client/doc/: ActiveStrategy.md  AgentModelOverrides.md  AgentReasoningOverrides.md  AppendFilesConfig.md  CommandConfig.md  CommitInfo.md  Config.md  DefaultApi.md  DockerOverrides.md  ExecCommandInput.md  (+30 more)
openapi/rust/: Cargo.toml  README.md
schemas/: orchestrator.generated.schema.json  orchestrator.schema.json  worker.generated.schema.json  worker.schema.json
scripts/: generate_openapi_clients.sh
server/: Cargo.toml
server/migrations/: 20241111120000_init.sql  20241201120000_sessions.sql  20250204120000_add_task_description.sql  20250220120000_image_cache.sql  202502211000001_add_task_overrides.sql  20250221100000_owner_nocase.sql
server/src/: compliance.rs  config_sync.rs  docker.rs  globals.rs  lib.rs  main.rs  post_turn_checks.rs  realtime.rs  util.rs
server/src/ai/: lib.rs  schemas.rs
server/src/db/: assignments.rs  feed.rs  image_cache.rs  lib.rs  message_queue.rs  mod.rs  session.rs  task.rs  task_dependency.rs  task_group.rs  worker.rs
server/src/mcp/: git_diff.rs  git_status.rs  mod.rs  project_command_list.rs  project_command_run.rs  project_commands.rs  session.rs  tasks_create.rs  tasks_create_group.rs  tasks_delete.rs  tasks_dependencies_get.rs  tasks_dependencies_set.rs  tasks_get.rs  tasks_groups_delete.rs  tasks_groups_get.rs  tasks_groups_list.rs  tasks_groups_update.rs  tasks_list.rs  tasks_set_status.rs  tasks_update.rs
server/src/models/: codex_events.rs  config.rs  lib.rs  mod.rs  process.rs  strategy.rs  task.rs  task_group.rs
server/src/routes/: config.rs  feed.rs  git.rs  healthz.rs  lib.rs  mcp.rs  message_queue.rs  orchestrator.rs  queue.rs  strategy.rs  task.rs  task_dependency.rs  task_group.rs  task_wizard.rs  worker.rs  ws.rs
server/src/shared/: codex_exec.rs  docker.rs  git.rs  mod.rs  shell.rs
server/src/system/: codex_config.rs  dirty_staging.rs  docker_overrides.rs  events.rs  features.rs  mod.rs  queue.rs  runner.rs  staging_hooks.rs  strategy.rs
server/src/threads/: database_manager.rs  lib.rs  middleware.rs  process_manager.rs  queue_manager.rs
server/tests/: process_pipeline.rs
(+137 files in other folders)
