[workspace]
members = [
    "server",
    "openapi/rust",
    "oai_strict_schema",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "v5", "serde", "js"] }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "signal", "process", "fs"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
futures = { version = "0.3.31" }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls", "stream", "blocking"], default-features = false }
rust_decimal = { version = "1.38.0", features = ["serde"] }
schemars = { version = "1.1.0", features = ["chrono04", "uuid1", "derive"] }
validator = { version = "0.20", features = ["derive"] }