[package]
name = "oai_strict_schema"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "oai_strict_schema"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
